--- a/app.json
+++ b/app.json
@@ -1,7 +1,11 @@
 {
   "expo": {
-    "name": "Edge Runnar",
+    "name": "GitEdge",
     "slug": "redemption",
+    "android": {
+      "package": "com.HBTU.GitEdge",
+      "versionCode": 1
+    },
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
@@ -11,7 +15,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/splash.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
