--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   "dependencies": {
     "@ant-design/react-native": "^3.3.0",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.8",
     "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
     "light-toast": "^0.2.3",
+    "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-chart-kit": "^6.3.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-really-awesome-button": "^1.6.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-share": "^3.1.2",
     "react-native-social-buttons": "^1.1.3",
+    "react-native-svg": "9.13.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-toastify": "^5.5.0"
   },
